# Mirror

./: .gitignore  Makefile  docker-compose.yml
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 591e3c64662d_initial_schema.py  7a1b2c3d4e5f_partial_subscription_unique.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  entities.py  subscriptions.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: mixins.py  session.py
backend/app/models/: __init__.py  enums.py  ledger.py  pnl.py  position.py  publication.py  subscription.py  target_entity.py  trade.py  user.py
backend/app/pipeline/clients/: rate_limiter.py  sec_edgar.py
backend/app/pipeline/jobs/: detect_publications.py
backend/app/pipeline/normalizers/: cusip_to_ticker.py
backend/app/pipeline/parsers/: parser_13f.py
backend/app/scheduler/: runner.py
backend/app/schemas/: __init__.py  auth.py  entity.py  subscription.py  user.py
backend/app/services/: position_sizing.py  pricing_service.py  trade_executor.py
backend/tests/: conftest.py  test_api_smoke.py  test_cusip_to_ticker.py  test_parser_13f.py  test_position_sizing.py  test_rate_limiter.py  test_schema_smoke.py  test_sec_edgar_pure.py  test_security.py
backend/tests/integration/: conftest.py  test_subscription_integration.py  test_trade_executor_integration.py  test_user_signup.py
docker/db/: pg_hba.conf
docker/db/init/: 00-trust-hba.sh  01-create-test-db.sql
scripts/: dev.py
